# yeelight-corsair

./: .gitignore  .gitmodules  README.md  package.json
custom_interface/: CMakeLists.txt  windows_build.bat
custom_interface/utils/cue_sdk/include/: CUESDK.hpp  cue_sdk.hpp
custom_interface/utils/http_request/: http_request.hpp
custom_interface/yeelight_corsair/: main.cpp
custom_interface/yeelight_corsair/Core/: Core.cpp  Core.hpp
custom_interface/yeelight_corsair/CorsairError/: CorsairError.cpp  CorsairError.hpp
custom_interface/yeelight_corsair/ServerInterface/: ServerInterface.cpp  ServerInterface.hpp
server/: main.js  package-lock.json  package.json
server/api/: api.js  calls.js
server/yeelight_server/: server.js  utils.js
src/: a.js  constants.js  light.js  main.js  main_old.js  server.js  tcp_tests.js
windows/: build.bat
windows/icue_custom_interface/: icue_custom_interface.sln
windows/icue_custom_interface/icue_custom_interface/: Source.cpp  icue_custom_interface.vcxproj
yeelight_server/src/: light.js  main.js  server.js
